--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container row">
         <div class="card">
             <h1 class="title">Register Here</h1>
             <form>
