--- a/index.html
+++ b/index.html
@@ -19,28 +19,33 @@
     <div class="container row">
         <div class="card">
             <h1 class="title">Register Here</h1>
-            <form>
+            <form class="submit-form">
                 <div class="form-control">
                     <label for="Username">Username</label>
                     <input type="text" id="username" name="username" placeholder="Enter your name"/>
                 </div>
+                <small class="small">Username is required</small>
                 <div class="form-control">
                     <label for="Emali">Emali address</label>
-                    <input type="Emali" id="Emali" name="Emali" placeholder="Enter your Emali"/>
+                    <input type="text" id="Emali" name="Emali" placeholder="Enter your Emali"/>
                 </div>
+                <small class="small">email is required</small>
                 <div class="form-control">
                     <label for="mobile">mobile number</label>
                     <input type="number" id="mobile" name="mobile" placeholder="Enter your mobile number"/>
                 </div>
+                <small class="small">phone number is required</small>
                 <div class="form-control">
-                    <label for="password">password</label>
-                    <input type="text" id="password" name="password" placeholder="Enter your password"/>
+                    <label for="new-password">password</label>
+                    <input type="text" id="new-password" name="new-password" placeholder="Enter your password"/>
                 </div>
+                <small class="small">password is required</small>
                 <div class="form-control">
                     <label for="confirm-password">confirm-password</label>
                     <input type="" id="confirm-password" name="confirm-password" placeholder="confirm your password"/>
                 </div>
-                <button class="btn">Submit</button>
+                <small class="small">confirm password is required</small>
+                <button class="btn btn-light btn-block">Submit</button>
 
 
             </form>
