validation in progress

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <small class="small">Username is required</small>
                 </div>
                 
-                <div class="form-control">
+                <div class="form-control" id="email">
                     <label for="emali">email address</label>
                     <input type="text" id="emali" name="email" placeholder="Enter your emali"/>
                     <small class="small">email  is required</small>
